added wokkel submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "lib/twisted-googletranslate"]
 	path = lib/twisted-googletranslate
 	url = git://github.com/ga2arch/twisted-googletranslate.git
+[submodule "lib/wokkel"]
+	path = lib/wokkel
+	url = git://github.com/dustin/wokkel.git
